--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
     <h1>future</h1>
-    <a href = 'futureheritage.imaginary.tools'>
+    <a href = 'futureheritage.imaginary.tools'>fh</a>
   </body>
 </html>
