--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <body>
     <h1>future</h1>
-    <a href = 'futureheritage.imaginary.tools'>fh</a>
+    <p>
+    <a href = "futureheritage.imaginary.tools">fh</a>
+    </p>
   </body>
 </html>
