--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <h1>future</h1>
     <p>
-    <a href = "futureheritage.imaginary.tools">fh</a>
+    <a href = "http://futureheritage.imaginary.tools">fh</a>
     </p>
   </body>
 </html>
